# imdb

./: README.md  pom.xml
.github/workflows/: rust.yml
src/main/java/com/lbx/demo/: DemoApplication.java
src/main/java/com/lbx/demo/controller/: CounterFilter.java  FileController.java  ImdbController.java
src/main/java/com/lbx/demo/dto/: Page.java  TitleBaseDto.java  TitleByYearDto.java
src/main/java/com/lbx/demo/exception/: AppExceptionHandler.java  BadRequestException.java  GenreNotFound.java  InvalidFileNameException.java  NameNotFound.java
src/main/java/com/lbx/demo/model/: FieldSettable.java  Genre.java  NameBasics.java  TSVMapper.java  TitleBasics.java  TitleCrew.java  TitlePrincipal.java  TitleRating.java
src/main/java/com/lbx/demo/service/: FileService.java  ImdbService.java  NameService.java  TitleService.java
src/main/resources/: application.yml
src/main/rust/: Cargo.toml
src/main/rust/src/: errors.rs  lib.rs  main.rs  utils.rs
src/main/rust/src/handlers/: counter_middleware.rs  db.rs  echo_handler.rs  file_handler.rs  imdb_handler.rs  mod.rs  name_service.rs  title_service.rs
src/main/rust/src/models/: imdb.rs  mapper.rs  messages.rs  mod.rs  name_basic.rs  title_basic.rs  title_crew.rs  title_principal.rs  title_rating.rs
src/main/rust/src/routes/: echo.rs  mod.rs  title_router.rs  upload.rs
src/main/rust/tests/: unit_test.rs
src/test/java/com/lbx/demo/: DemoApplicationTests.java
src/test/resources/: name.basics.tsv  title.basics.tsv  title.crew.tsv  title.principals.tsv  title.ratings.tsv
