[package]
name = "simple_api"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
reqwest = { version = "0.12.23", features = ["multipart", "blocking"] }
regex = "1.11.1"
actix-multipart = "0.7.2"    
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
actix-rt = "2"
once_cell = "1.21"
derive_more = "2"
ctor = "0.5.0"